# Roguelite

./: CMakeLists.txt  ProjectArchitecture.md  README.md  SDLQuickReference.md
src/: Button.cpp  Button.h  ErrorHandling.h  Rectangle.h  UI.h  Window.h  main.cpp  test.cpp
